@@ -1,5 +1,15 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2003-06-23 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* src/PatternLayout.cpp: added missing '%t' thread name specifier 
+	(support request #753974)
+	
+	
+2003-05-26 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* m4/ac_config_libconfig_in.m4: added version 0.5.52 from ac-archive.
+	* m4/ac_config_pkgconfig_in.m4: added version 0.5.52 from ac-archive.
+
+	
 2003-05-23 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* src/PropertyConfiguratorImpl.cpp: added support for configuring LocalSyslogAppenders.
 
